# Knots

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  KnotEditor.pro  Makefile  README.13Jun2005  README.md  TODO-diagram.md  config.mk  create_script.sh
cmake/: CPackMacDeployQt.cmake.in  Packaging.cmake  msvc.cmake  rapidjson.cmake  version.cmake  win32.cmake
data/: 11_1.knt  17_1.knt  3_1#-3_1.dgr  3_1#-3_1.knt  3_1#3_1.dgr  3_1#3_1.knt  3_1+-3_1.knt  3_1+3_1.knt  3_1.dgr  3_1.knt  4_1.dgr  4_1.knt  5_1.dgr  5_1.knt  5_2.dgr  (+73 more)
modules/app/: CMakeLists.txt  Info.plist
modules/app/res/: data.qrc  html.qrc  images.qrc  styles.qrc
modules/app/res/html/: about.html
modules/app/res/images/: SOURCES.md  trefoil.icns
modules/app/res/styles/: default.css
modules/app/src/: .gitignore  AboutDialog.cpp  AboutDialog.h  Application.cpp  Application.h  BaseWindow.cpp  BaseWindow.h  DiagramPropertiesDialog.cpp  DiagramWidget.cpp  DiagramWidget.h  DiagramWindow.cpp  DiagramWindow.h  FileIconProvider.cpp  FileIconProvider.h  GLWidget.cpp  GLWidget.h  IPCController.cpp  IPCController.h  KnotMathDialog.cpp  KnotOptionsDialog.cpp  KnotWidget.cpp  KnotWidget.h  KnotWidget_smooth.cpp  KnotWindow.cpp  KnotWindow.h  LibraryModel.cpp  LibraryModel.h  LibraryWindow.cpp  LibraryWindow.h  NetworkManager.cpp  NetworkManager.h  Preview.cpp  Preview.h  Version.h.in  Window.cpp  Window.h  main.cpp
modules/other/: CMakeLists.txt
modules/other/src/: alexander_polynomial.cpp  converter.cpp  dtcode.cpp  torus.cpp  vassiliev.cpp
src/math/: AlexanderPolynomial.cpp  CMakeLists.txt  DTCode.cpp  DiagramProperty.h  Makefile  Polynomial.cpp  Polynomial.h  SquareMatrix.h  acn.cpp  aen.cpp  computable.cpp  computable.h  computables.h  experimental.cpp  experimental.h  experimental2.cpp  math.pro  moebius_energy.cpp  singular.cpp  vassiliev_invariant.cpp
src/math/computables/: Makefile  acn.cpp  aen.cpp  computable.cpp  computable.h  computables.h  experimental.cpp  experimental.h  experimental2.cpp  moebius_energy.cpp  singular.cpp  vassiliev_invariant.cpp
src/math/diagram/: Diagram.cpp  Diagram.h  Diagram_crossing.cpp  Diagram_serialization.cpp  Diagram_simplify.cpp  Diagram_stream.cpp  Diagram_vertex.cpp
src/math/diagramEditor/: DiagramEditor.cpp  DiagramEditor.h  DiagramEditor_save.cpp  DiagramEditor_undo.cpp  Makefile
src/math/knot/: Knot.h  KnotSurface.cpp  KnotSurface.h  Knot_diagram.cpp  Knot_normalize.cpp  Knot_seifert.cpp  Knot_serialization.cpp  Knot_smooth.cpp  Knot_snapshot.cpp  Knot_stream.cpp  primitives.h
src/math/knot/computables/: acn.cpp  aen.cpp  computable.cpp  experimental.cpp  experimental2.cpp  length.cpp  moebius_energy.cpp  singular.cpp  vassiliev_invariant.cpp
src/math/knotEditor/: KnotEditor.h
src/math/knotSurface/: KnotSurface.cpp  KnotSurface.h  Makefile
src/math/knotWrapper/: KnotSurface.cpp  KnotSurface.h  KnotWrapper.cpp  KnotWrapper.h  Makefile
src/math/seifert/: SeifertSurface.cpp  SeifertSurface.h  seifert.cpp  seifert.h  seifert_list.cpp  seifert_ord.cpp  seifert_surface.cpp  seifert_surface.h
src/math/surface/: Color.cpp  Color.h  Makefile  Surface.cpp  Surface.h  Surface_gl.cpp
src/other/: CMakeLists.txt  Makefile  alexander_polynomial.cpp  commandline.pri  converter.cpp  dtcode.cpp  other.pro  torus.cpp  vassiliev.cpp
src/other/alexander_polynomial/: CMakeLists.txt  alexander_polynomial.cpp  alexander_polynomial.pro
src/other/converter/: CMakeLists.txt  converter.cpp  converter.pro
src/other/dtcode/: CMakeLists.txt  dtcode.cpp  dtcode.pro
src/other/torus/: CMakeLists.txt  torus.cpp  torus.pro
src/other/vassiliev/: CMakeLists.txt  vassiliev.cpp  vassiliev.pro
src/qt/: AboutDialog.cpp  AboutDialog.h  AboutWindow.cpp  AboutWindow.h  Application.cpp  Application.h  Application_network.cpp  BaseWindow.cpp  BaseWindow.h  CMakeLists.txt  DiagramPropertiesDialog.cpp  DiagramWidget.cpp  DiagramWidget.h  DiagramWindow.cpp  DiagramWindow.h  FileIconProvider.cpp  FileIconProvider.h  GLWidget.cpp  GLWidget.h  GLWidget_rotate.cpp  IPCController.h  Info.plist  KnotEditorApplication.cpp  KnotEditorApplication.h  KnotEditorApplication_network.cpp  KnotMathDialog.cpp  KnotMathDialog.h  KnotOptionsDialog.cpp  KnotOptionsDialog.h  KnotWidget.cpp  KnotWidget.h  KnotWidget_options.cpp  KnotWidget_smooth.cpp  KnotWidget_stream.cpp  KnotWindow.cpp  KnotWindow.h  KnotWindow_menu.cpp  LibraryModel.cpp  LibraryModel.h  LibraryWindow.cpp  (+17 more)
src/qt/abstractWindow/: abstractWindow.cpp  abstractWindow.h
src/qt/diagram/: DiagramWidget.cpp  DiagramWidget.h  Makefile  diagramWindow.cpp  diagramWindow.h
src/qt/gl/: GLWidget.cpp  GLWidget.h  GLWidget_rotate.cpp  GLWindow.cpp  GLWindow.h  GLWindow_rotate.cpp
src/qt/knot/: KnotWidget.cpp  KnotWidget.h  KnotWidget_options.cpp  KnotWidget_smooth.cpp  KnotWidget_stream.cpp  Makefile  knotWindow.h  knotWindow_base.cpp  knotWindow_colors.cpp  knotWindow_math.cpp  knotWindow_math.h  knotWindow_menu.cpp  knotWindow_options.cpp  knotWindow_param.cpp  knotWindow_seifert.cpp  knotWindow_smooth.cpp  knotWindow_stream.cpp
src/qt/manager/: Makefile  about.cpp  about.h  iconProvider.cpp  iconProvider.h  icon_provider.cpp  icon_provider.h  images.qrc  main.cpp  manager.cpp  manager.h
src/qt/setValue/: Makefile  setValue.h  setValue_Float.cpp  setValue_Int.cpp  setValue_String.cpp
src/qt/widget/: DiagramWidget.cpp  DiagramWidget.h  GLWidget.cpp  GLWidget.h  GLWidget_rotate.cpp  KnotWidget.cpp  KnotWidget.h  KnotWidget_options.cpp  KnotWidget_smooth.cpp  KnotWidget_stream.cpp  Makefile
src/qt/window/: DiagramWindow.cpp  DiagramWindow.h  GLWindow.cpp  GLWindow.h  KnotMathDialog.cpp  KnotMathDialog.h  KnotOptionsDialog.cpp  KnotOptionsDialog.h  KnotWindow.cpp  KnotWindow.h  KnotWindow_base.cpp  KnotWindow_math.cpp  KnotWindow_math.h  KnotWindow_menu.cpp  Makefile  Window.cpp  Window.h  Window_static.cpp  abstractWindow.cpp  abstractWindow.h  abstractWindow_static.cpp  diagramWindow.cpp  diagramWindow.h  knotWindow.h  knotWindow_base.cpp  knotWindow_math.cpp  knotWindow_math.h  knotWindow_menu.cpp  knotWindow_param.h
(+333 files in other folders)
